--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -627,7 +627,7 @@
                                     alert($("#share-message-1").text() + "\n\nClub:\nhttps://club.latin-chain.com/\ndApps:\nhttps://latinchain.pinet.com/");
                                     var shareData = {
                                         title: 'LatinChain Shopping Club',
-                                        text: $("#share-message-1").text() + "\n\nClub:\nhttps://club.latin-chain.com/\ndApps:\nhttps://latinchain.pinet.com/",
+                                        text: "1234",//$("#share-message-1").text() + "\n\nClub:\nhttps://club.latin-chain.com/\ndApps:\nhttps://latinchain.pinet.com/",
                                         //url: 'https://latin-chain.com/',
                                     }
                                     
