--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -551,11 +551,13 @@
                                     
                                     if (localStorage.getItem(STORAGE_KEY_MAINSCREEN) !== 'true'){ // || !('speechSynthesis' in window)) {
                                         $('#pi_automatic_accessibility').prop('checked', false);
-                                        speechModule.deactivate();
+                                        //speechModule.deactivate();
+                                        $("html").click();
                                     }else
                                     {
                                         $('#pi_automatic_accessibility').prop('checked', true);
-                                        speechModule.activate();
+                                        //speechModule.activate();
+                                        $("html").click();
                                     }
                                     
                                     $('#pi_automatic_accessibility').change(function() {
