--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -545,7 +545,18 @@
                                 
                                     $("html").attr("lang", "en");
                                     
+                                    await delayAsync(10000);
+                                    
                                     const STORAGE_KEY_MAINSCREEN = 'speech_synthesis_active';
+                                    
+                                    if (localStorage.getItem(STORAGE_KEY_MAINSCREEN) !== 'true'){ // || !('speechSynthesis' in window)) {
+                                        $('#pi_automatic_accessibility').prop('checked', false);
+                                        //speechModule.deactivate();
+                                    }else
+                                    {
+                                        $('#pi_automatic_accessibility').prop('checked', true);
+                                        //speechModule.activate();
+                                    }
                                     
                                     $('#pi_automatic_accessibility').change(function() {
                                         var pi_automatic_accessibility = $("#pi_automatic_accessibility").is(":checked");
@@ -559,15 +570,6 @@
                                             speechModule.deactivate();
                                         }
                                     });
-                                    
-                                    if (localStorage.getItem(STORAGE_KEY_MAINSCREEN) !== 'true'){ // || !('speechSynthesis' in window)) {
-                                        $('#pi_automatic_accessibility').prop('checked', false);
-                                        //speechModule.deactivate();
-                                    }else
-                                    {
-                                        $('#pi_automatic_accessibility').prop('checked', true);
-                                        //speechModule.activate();
-                                    }
                                 
                                 })();
                             });
