--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -552,10 +552,12 @@
                                     if (localStorage.getItem(STORAGE_KEY_MAINSCREEN) !== 'true'){ // || !('speechSynthesis' in window)) {
                                         $('#pi_automatic_accessibility').prop('checked', false);
                                         speechModule.deactivate();
+                                        alert("deactivated");
                                     }else
                                     {
                                         $('#pi_automatic_accessibility').prop('checked', true);
                                         speechModule.activate();
+                                        alert("activated");
                                     }
                                     
                                     $('#pi_automatic_accessibility').change(function() {
