--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -568,6 +568,8 @@
                                             speechModule.deactivate();
                                         }
                                     });
+                                    
+                                    $("body").focus();
                                 
                                 })();
                             });
