--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -543,7 +543,7 @@
                             $( document ).ready(function() {
                                 (async () => {
                                 
-                                    //$("html").attr("lang", "en");
+                                    $("html").attr("lang", "en");
                                     
                                     const STORAGE_KEY_MAINSCREEN = 'speech_synthesis_active';
                                     
